feat: add simulation mqtt bridge
